# bsvm

./: .env  Cargo.toml  README.md  call_bitcoin_space.ts
src/: btc_client.rs  btc_json_serde.rs  space_vm.rs
