[package]
name = "btcvmspace"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
